--- a/Info.html
+++ b/Info.html
@@ -28,11 +28,11 @@
     <div class= "signup-form">
       <form    action="#" method="post" >
        <h2 style="font-size:30px;color:#0b2763;">Signed up!</h2>
-       <label for="fname">First Name</label>
-       <input class="text-input" id="fname" name="first_name" type="text" required>
-       <label for="lname">Last Name</label>
+       <label for="fname">First Name</label><br>
+       <input class="text-input" id="fname" name="first_name" type="text" required><br>
+       <label for="lname">Last Name</label><br>
        <input class="text-input" id="lname" name="last_name" type="text" required><br>
-       <label for="email">Email Address</label>
+       <label for="email">Email Address</label><br>
        <input class="text-input" id="email" name="email_address" type="email" required><br>
        <input class="join-button" type="submit" value="Join!">
       </form>
