--- a/Home.html
+++ b/Home.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Streets-of-Rome</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="Css/style.css" type="text/css">
    </head>
@@ -25,7 +24,7 @@
  </header>
                                                   <!----contents---->
   <section >                                                
-    <div class="conteiner" >
+    <div class="conteiner " >
       <h1 id="subject"> <em> Streets<br> of <br> Rome </em></h1>
     </div>
 
@@ -39,7 +38,7 @@
       <p>The Via dei Fori Imperiali (formerly Via dei Monti, then Via dell'Impero)[1] is a road in the centre of the city of Rome, Italy, that runs in a straight line from the Piazza Venezia to the Colosseum. Its course takes it over parts of the Forum of Trajan, Forum of Augustus and Forum of Nerva, parts of which can be seen on both sides of the road. Since the 1990s, there has been a great deal of archeological excavation on both sides of the road, as significant Imperial Roman relics remain to be found underneath it.The Via dei Fori Imperiali completely changed the landscape and character of a part of Rome: before its construction, the Colosseum was not visible from Piazza Venezia and the imperial fora were hidden by a popular quarter of the fifteenth century.</p>
       <a href= "https://www.google.com/maps/place/Via+dei+Fori+Imperiali,+Roma+RM,+Italy/@41.8933542,12.484765,17z/data=!3m1!4b1!4m5!3m4!1s0x132f61b3f0a39c4f:0x42f40ce9df3b57c7!8m2!3d41.8933542!4d12.4869537" style="text-decoration:none" target="_blank"><span><i class="fa fa-map-marker" aria-hidden="true" style="color:black;font-size:20px;"></i></span></a>
     </div>
-    <div id="item2" class="">
+    <div id="item2" >
       <h2> VIA DELLA CONCILIAZIONE<br> <span class="name" >"Road of Conciliation"</span></h2>
       <img src="https://img.locationscout.net/images/2017-03/basilica-di-san-pietro-via-della-conciliazione-italy-obd3_l.jpeg" class="image">
       <p>Via della Conciliazione (Road of the Conciliation[1]) is a street in the Rione of Borgo within Rome, Italy. Roughly 500 metres (1,600 ft) in length,[2] it connects Saint Peter's Square to the Castel Sant'Angelo on the western bank of the Tiber River. The road was constructed between 1936 and 1950, and it is the primary access route to the Square. In addition to shops, it is bordered by a number of historical and religious buildings – including the Palazzo Torlonia, the Palazzo dei Penitenzieri and the Palazzo dei Convertendi, and the churches of Santa Maria in Traspontina and Santo Spirito in Sassia.</p>
