--- a/Info.html
+++ b/Info.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Streets-of-Rome</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" type="text">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="Css/style.css" type="text/css">
 </head>
@@ -14,7 +14,7 @@
 <body class="wrapper">
  <header>
   <nav>
-   <div><span>Iconic Streets Of The Italian Capital !</span>
+   <div><span> . . . .  sign-up to your newsletter! . . </span>
     <ul class="info">
       <li><a href= "Home.html" style="text-decoration:none">Home</a></li>
       <li><a href= "#"> About </a></li>
