paragraph color changed,background image resized,signup form resized,menu rename change info to contact

--- a/Info.html
+++ b/Info.html
@@ -14,11 +14,11 @@
 <body class="wrapper">
  <header>
   <nav>
-   <div><span> . . . .  sign-up to your newsletter! . . </span>
+   <div><span>Iconic Streets Of The Italian Capital! </span>
     <ul class="info">
       <li><a href= "Home.html" style="text-decoration:none">Home</a></li>
       <li><a href= "#"> About </a></li>
-      <li> <a href= "Info.html"> Info </a></li>
+      <li> <a href= "Info.html">Contact</a></li>
     </ul>
    </div>
   </nav>
@@ -27,7 +27,7 @@
  <section class="layout">
     <div class= "signup-form">
       <form    action="#" method="post" >
-       <h2 style="font-size:30px;color:#0b2763;">Signed up!</h2>
+       <h2 style="font-size:30px;color:white;">Contact</h2>
        <label for="fname">First Name</label><br>
        <input class="text-input" id="fname" name="first_name" type="text" required><br>
        <label for="lname">Last Name</label><br>
