--- a/info.html
+++ b/info.html
@@ -35,7 +35,8 @@
        <input class="text-input" id="lname" name="last_name" type="text" required><br>
        <label for="email">Email Address</label><br>
        <input class="text-input" id="email" name="email_address" type="email" required><br>
-       <input class="join-button" type="submit" value="Join!">
+       <input class="message-input" id="message" name="message" placeholder="leave a message.." type="text"><br>
+       <input class="join-button" type="submit" value="Send!">
       </form>
     </div>
 
