photos added to the gallery,outer zoom animation created in the background image of the index.html in the main section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
  </header>
                                                   <!----contents---->
   <main>                                                
-     <div class="conteiner " >
+     <div class="conteiner " id="container-image-outer" >
        <h1 id="subject"> <em> Streets<br> of <br> Rome </em></h1>
      </div>
   </main>
