--- a/info.html
+++ b/info.html
@@ -47,7 +47,7 @@
                 <!--footer starts-->
 
 
- <footer id="footer2"> 
+ <footer id="footer-info"> 
     
  
                 <!---social media bar-->
