social media link

--- a/info.html
+++ b/info.html
@@ -2,7 +2,8 @@
 <html lang="en">
  <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1,">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Streets-of-Rome</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -52,11 +53,11 @@
                                       <!---social media bar-->
 
     <div class="icon-bar">
-         <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-         <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-         <a href="#" class="google"><i class="fa fa-google"></i></a>
-         <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
-         <a href="#" class="youtube"><i class="fa fa-youtube"></i></a>
+         <a href="https://www.facebook.com/" target="blank_"><i class="fa fa-facebook"></i></a>
+         <a href="https://twitter.com/" target="blank_" ><i class="fa fa-twitter"></i></a>
+         <a href="https://www.google.com/" target="blank_" ><i class="fa fa-google"></i></a>
+         <a href="https://linkedin.com/" target="blank_"><i class="fa fa-linkedin"></i></a>
+         <a href="https://www.youtube.com/" target="blank_"><i class="fa fa-youtube"></i></a>
     </div>
  </footer>
 
