responsive design completed README.md file update

--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,7 @@
  </head>
     
                                               <!----header---->
-<body class="wrapper">
+<body>
  <header>
   <nav >
    <div><span>Iconic Streets Of The Italian Capital! </span>
