--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1,">
-    <title>Streets-of-Rome</title>
+    <title>Home | Streets of Rome</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
@@ -14,12 +14,12 @@
                                <!--header starts---->
  <header>                        
   
-   <nav>
+   <nav class="navbar navbar-expand-sm">
      <div><span>Iconic Streets Of The Italian Capital!</span>
-      <ul class="info">
-        <li><a href= "index.html" style="text-decoration:none">Home</a></li>
-        <li><a href= "gallery.html"> Gallery </a></li>
-        <li> <a href= "info.html">Contact</a></li>
+     <ul class="info navbar-nav">
+        <li class="nav-item active"><a class="nav-link" href= "index.html" style="text-decoration:none">Home</a></li>
+        <li class="nav-item active"><a class="nav-link" href= "gallery.html"> Gallery </a></li>
+        <li class="nav-item active"> <a class="nav-link" href= "info.html">Contact</a></li>
       </ul>
       </div>
      
@@ -48,7 +48,7 @@
          <div class="section-container" id="item1">
            <h2>VIA DEI FORI IMPERIALI <br><span class="name" >"Imperial Road"</span></h2>
            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d0/ViadeiForiImperiali.jpg/1920px-ViadeiForiImperiali.jpg" class="image">
-           <p class="text_info"><span><a href= "https://www.google.com/maps/place/Via+dei+Fori+Imperiali,+Roma+RM/@41.8933582,12.484765,17z/data=!3m1!4b1!4m5!3m4!1s0x132f61b3f0a39c4f:0x42f40ce9df3b57c7!8m2!3d41.8933542!4d12.4869537"  target="_blank" style="text-decoration:none;font-size:23px;"> <cite> The Via dei Fori Imperiali </cite></a><span> <i class="fa fa-map-pin " aria-hidden="true"></i></span></span> (formerly Via dei Monti, then Via dell'Impero) is a road in the centre of the city of Rome,Italy, that runs in a straight line from the Piazza Venezia to the Colosseum. Its course takes it over parts of the Forum of Trajan, Forum of Augustus and Forum of Nerva, parts of which can be seen on both sides of the road. Since the 1990s, there has been a great deal of archeological excavation on both sides of the road, as significant Imperial Roman relics remain to be found underneath it.The Via dei Fori Imperiali completely changed the landscape and character of a part of Rome: before its construction, the Colosseum was not visible from Piazza Venezia and the imperial fora were hidden by a popular quarter of the fifteenth century.</p>
+           <p class="text_info"><span><a href= "https://www.google.com/maps/place/Via+dei+Fori+Imperiali,+Roma+RM/@41.8933582,12.484765,17z/data=!3m1!4b1!4m5!3m4!1s0x132f61b3f0a39c4f:0x42f40ce9df3b57c7!8m2!3d41.8933542!4d12.4869537" target="_blank" style="text-decoration:none;font-size:23px;"><cite>The Via dei Fori Imperiali</cite></a><span><i class="fa fa-map-pin " aria-hidden="true"></i></span></span>(formerly Via dei Monti, then Via dell'Impero) is a road in the centre of the city of Rome,Italy, that runs in a straight line from the Piazza Venezia to the Colosseum. Its course takes it over parts of the Forum of Trajan, Forum of Augustus and Forum of Nerva, parts of which can be seen on both sides of the road. Since the 1990s, there has been a great deal of archeological excavation on both sides of the road, as significant Imperial Roman relics remain to be found underneath it.The Via dei Fori Imperiali completely changed the landscape and character of a part of Rome: before its construction, the Colosseum was not visible from Piazza Venezia and the imperial fora were hidden by a popular quarter of the fifteenth century.</p>
              
         </div>
         <div class="section-container" id="item2" >
