README.md file update

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <!----navbar---->
 
             <nav class="navbar navbar-expand-lg navbar-light">
-                <spam class="brand navbar-brand">Iconic Streets Of The Italian Capital!</spam>
+                <h3 class="brand navbar-brand">Iconic Streets Of The Italian Capital!</h3>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -49,8 +49,8 @@
                 </div>
             </div>
         </main>
-        <!---main section---->
-        <!----these divs will have a coloured background--->
+        <!---main section--->
+        <!---these divs will have a coloured background--->
 
         <section>
             <div class="section-container" id="item1">
@@ -188,5 +188,5 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     </body>
 </html>
-<!-----LEAVE A COMMENT---->
+<!----LEAVE A COMMENT---->
 
