--- a/gallery.html
+++ b/gallery.html
@@ -15,7 +15,7 @@
         <header>
             <!----navbar---->
             <nav class="navbar navbar-expand-lg navbar-light">
-                <spam class="brand navbar-brand" >Iconic Streets Of The Italian Capital!</spam>
+                <h3 class="brand navbar-brand" >Iconic Streets Of The Italian Capital!</h3>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
